force-app/main/default/objects/Offer__c/fields/Accounting_Phone__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Phone__c</fullName>
    <label>Телефон бухгалтерии</label>
    <type>Phone</type>
</CustomField>