force-app/main/default/objects/Offer__c/fields/Apartments__c.field-meta.xml
<CustomField>
    <fullName>Apartments__c</fullName>
    <label>Дом, офис, кв.</label>
    <type>TextArea</type>
</CustomField>