force-app/main/default/objects/Offer__c/fields/BankBIK__c.field-meta.xml
<CustomField>
    <fullName>BankBIK__c</fullName>
    <label>БИК банка</label>
    <length>255</length>
    <type>Text</type>
</CustomField>