force-app/main/default/objects/Offer__c/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <label>Адрес</label>
    <length>255</length>
    <type>Text</type>
</CustomField>