force-app/main/default/objects/Offer__c/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <label>Город</label>
    <length>255</length>
    <type>Text</type>
</CustomField>