force-app/main/default/objects/Offer__c/fields/BillingIndex__c.field-meta.xml
<CustomField>
    <fullName>BillingIndex__c</fullName>
    <label>Индекс</label>
    <length>10</length>
    <type>Text</type>
</CustomField>