force-app/main/default/objects/Offer__c/fields/CheckingAcc__c.field-meta.xml
<CustomField>
    <fullName>CheckingAcc__c</fullName>
    <label>Расчетный счет</label>
    <length>20</length>
    <type>Text</type>
</CustomField>