force-app/main/default/objects/Offer__c/fields/CoincidesLegal__c.field-meta.xml
<CustomField>
    <fullName>CoincidesLegal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CoincidesLegal</label>
    <type>Checkbox</type>
</CustomField>