force-app/main/default/objects/Offer__c/fields/CorAcc__c.field-meta.xml
<CustomField>
    <fullName>CorAcc__c</fullName>
    <label>Кор. счет</label>
    <length>20</length>
    <type>Text</type>
</CustomField>