force-app/main/default/objects/Offer__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>Индекс</label>
    <length>255</length>
    <type>Text</type>
</CustomField>