force-app/main/default/objects/Offer__c/fields/KPP__c.field-meta.xml
<CustomField>
    <fullName>KPP__c</fullName>
    <label>КПП</label>
    <length>255</length>
    <type>Text</type>
</CustomField>