force-app/main/default/objects/Offer__c/fields/NDS__c.field-meta.xml
<CustomField>
    <fullName>NDS__c</fullName>
    <label>Применяемая ставка НДС</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>Не облагается</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>