force-app/main/default/objects/Offer__c/fields/OrgINN__c.field-meta.xml
<CustomField>
    <fullName>OrgINN__c</fullName>
    <label>ИНН</label>
    <length>255</length>
    <type>Text</type>
</CustomField>