force-app/main/default/objects/Offer__c/fields/RestName__c.field-meta.xml
<CustomField>
    <fullName>RestName__c</fullName>
    <label>Название ресторана</label>
    <length>255</length>
    <type>Text</type>
</CustomField>