force-app/main/default/objects/Offer__c/fields/SignerName__c.field-meta.xml
<CustomField>
    <fullName>SignerName__c</fullName>
    <label>Имя подписанта в именительном падеже</label>
    <length>255</length>
    <type>Text</type>
</CustomField>