force-app/main/default/objects/Offer__c/fields/SignerPosition__c.field-meta.xml
<CustomField>
    <fullName>SignerPosition__c</fullName>
    <label>Должность подписанта</label>
    <length>255</length>
    <type>Text</type>
</CustomField>